syntax = "proto3";

package message;

service MessageService {
    rpc ProcessIntent(TextRequest) returns (ReplicateResponse);
}

message TextRequest {
    string intent = 1;
}

message ReplicateResponse {
    repeated string img_urls = 1;
}
